# agient

./: .pre-commit-config.yaml  .pylintrc  LICENCE  README.md  examples.py  llm.py  main.py  mypy.ini  pyproject.toml  storage.py
.github/workflows/: build.yml  lint.yml  test.yml
agient/: __init__.py
examples/: common.py  senator_example.py  student_example.py  teacher_example.py
llm/: __init__.py  base.py  config.py
llm/providers/: __init__.py  anthropic.py  openai.py
models/: agent.py  base.py  demographics.py  environment.py  memory.py  personality.py
tests/: test_llm.py  test_storage.py
utils/: message_utils.py
