[tool.poetry]
name = "agient"
version = "0.1.0"
description = "A Psychologically-Grounded Agent Simulation Framework"
authors = ["Daniel Merja <daniel.merja@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.8"
openai = "^0.27.0"
anthropic = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
mypy = "^0.910"
black = "^21.9b0"
pylint = "^2.11.1"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
